--- a/OpenHealthTrackerApi/Properties/launchSettings.json
+++ b/OpenHealthTrackerApi/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "OpenHealthTrackerApi": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
       "applicationUrl": "http://localhost:5080",
       "environmentVariables": {
