--- a/OpenHealthTrackerApi/OpenHealthTrackerApi.csproj
+++ b/OpenHealthTrackerApi/OpenHealthTrackerApi.csproj
@@ -20,6 +20,7 @@
 
     <ItemGroup>
       <Folder Include="Data\Migrations" />
+      <Folder Include="Services\BLL" />
     </ItemGroup>
 
 </Project>
