--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -27,4 +27,4 @@ jobs:
     - name: Upload Artifact
       uses: actions/upload-artifact@v3.1.2
       with:
-        path: OpenHealthTrackerApi\bin\Debug\net6.0\publish\
+        path: OpenHealthTrackerApi/bin/Debug/net6.0/publish
