--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -22,6 +22,11 @@ jobs:
       run: dotnet restore
     - name: Build
       run: dotnet publish
+    - name: Configure
+      uses: "finnp/create-file-action@master"
+      env:
+        FILE_NAME: "OpenHealthTrackerApi/bin/Debug/net6.0/publish/appsettings.json"
+        FILE_DATA: ${{secrets.APPSETTINGS}}
     - name: Deploy to HBI Server
       uses: easingthemes/ssh-deploy@main
       env:
